# chat-with-gpt

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
server/: .pre-commit-config.yaml  README.md  pyproject.toml
server/chatbot/: __init__.py  __main__.py  conftest.py  settings.py
server/chatbot/db/: base.py  utils.py
server/chatbot/db/models/: __init__.py
server/chatbot/services/: __init__.py
server/chatbot/tests/: Untitled.ipynb  __init__.py
server/chatbot/web/: __init__.py  application.py  lifetime.py
server/chatbot/web/api/: __init__.py  router.py
server/chatbot/web/api/chat/: __init__.py  api_key.txt  function_call.txt  normal_chat.txt  schema.py  views.py  views_backup.py
server/chatbot/web/api/chat/algorithms/: weather_util.py
server/chatbot/web/api/docs/: __init__.py  schema.py  views.py
server/chatbot/web/api/echo/: __init__.py  views.py
server/chatbot/web/api/monitoring/: __init__.py
server/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
web/: package-lock.json
web/app/: package-lock.json  package.json
web/app/src/: App.css  App.jsx  App_stream_demo.jsx  ChatPage.jsx  SideBar.jsx  index.css
