[tool.poetry]
name = "chat-with-gpt"
version = "0.1.0"
description = ""
authors = ["Wang Jiawen <e-wjg@outlook.com>"]
readme = "README.md"
packages = [{include = "chat_with_gpt"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
